--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "firebase": "^7.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-firebase-hooks": "^2.1.0",
@@ -17,7 +19,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   },
   "browserslist": {
     "production": [
@@ -31,9 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "prettier": {
-    "singleQuote": true,
-    "semi": false,
-    "printWidth": 120
+  "devDependencies": {
+    "standard": "^14.3.1"
   }
 }
