--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meal-planner",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "homepage": "https://alvaro07.github.io/meal-planner/",
   "private": true,
   "dependencies": {
     "@reach/router": "^1.2.1",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "standard": "^14.3.1"
   }
 }
