--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^7.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-favicon": "0.0.17",
     "react-firebase-hooks": "^2.1.0",
     "react-icons": "^3.7.0",
     "react-scripts": "3.2.0",
