--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-favicon": "0.0.17",
     "react-firebase-hooks": "^2.1.0",
     "react-icons": "^3.7.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.0"
   },
   "scripts": {
